[gd_scene load_steps=5 format=3 uid="uid://omea5gr86rev"]

[ext_resource type="Script" path="res://assets/fan/fan.gd" id="1_yc8fs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ip6b8"]
albedo_color = Color(0.197937, 0.197937, 0.197937, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a8ega"]
height = 64.0
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ch8fx"]
height = 0.2
radius = 1.0

[node name="Fan" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
disable_mode = 1
collision_layer = 3
collision_mask = 3
mass = 1000.0
freeze = true
script = ExtResource("1_yc8fs")
base_mass = 1000.0
scales = Array[float]([0.75, 1.0, 1.5, 2.5])
current_scale = 1

[node name="Mesh" type="CSGCylinder3D" parent="."]
radius = 1.0
height = 0.25
material = SubResource("StandardMaterial3D_ip6b8")

[node name="AirArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AirArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 32, 0)
shape = SubResource("CylinderShape3D_a8ega")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_ch8fx")

[connection signal="body_entered" from="AirArea" to="." method="_on_air_area_body_entered"]
[connection signal="body_exited" from="AirArea" to="." method="_on_air_area_body_exited"]
